--- a/index.html
+++ b/index.html
@@ -4,9 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <title>Jessica's Portfolio</title>
 </head>
 <body>
+    <header>
+        <nav></nav>
+
+    <section id="welcome-section">
+        <h1>Jessica Mangiameli</h1>
+        <h3>Full Stack Web Developer</h3>
+        <p>Hi! I'm Jessica and I design websites. I'm currently located in the midwest and enjoy traveling, reading and cooking in my free time. My skills include: HTML, CSS, JavaScript</p>
+    </section>
+    </header>
+
+    <main>
+        <div>
+            <div>
+
+            </div>
+
+        </div>
+
+        <div>
+
+        </div>
+
+        <div></div>
+
+    </main>
     
 </body>
 </html>
