--- a/index.html
+++ b/index.html
@@ -11,17 +11,15 @@
     <header>
         <nav id="navbar">
             <ul>
-                <li><a href="#about">About</a></li>
                 <li><a href="#certificates">Certificates</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
 
-    <section id="welcome-section" class="about">
+    <section id="welcome-section">
         <h1>Jessica Mangiameli</h1>
         <h3>Full Stack Web Developer</h3>
-        <p>Hi! I'm Jessica and I design websites. I'm currently located in the midwest and enjoy traveling, reading and cooking in my free time. My skills include: HTML, CSS, JavaScript</p>
     </section>
     </header>
 
@@ -54,8 +52,10 @@
                 <div class="column">
                 <h2>Collaborative Projects</h2>
                 </div>
-            <div class="right-column project-tile">
-                
+            <div class="right-column collabproject-tile">
+                <a href="https://shanestewart4.github.io/Ideal-Meal/">Ideal Meal</a>
+                <a href="https://gentle-hollows-60962.herokuapp.com">Doorman</a>
+                <a href="https://pokefinder-tcg.herokuapp.com/">PokefinderTCG</a>
             </div>
             </div>
         </section>
@@ -65,8 +65,11 @@
                 <div class="column">
                 <h2>Contact</h2>
                 </div>
-            <div class="right-column">
-                <a href="mailto:jmangiam@asu.edu">Email</a>
+            <div id="contactLink" class="right-column">
+                <ul>
+                <li><a href="mailto:jmangiam@asu.edu">Email</a></li>
+                <li><a href="https://github.com/jessm91" target="_blank">Github</a></li>
+                </ul>
             </div>
             </div>
         </section>
