--- a/index.html
+++ b/index.html
@@ -53,9 +53,15 @@
                 <h2>Collaborative Projects</h2>
                 </div>
             <div class="right-column collabproject-tile">
-                <a href="https://shanestewart4.github.io/Ideal-Meal/">Ideal Meal</a>
-                <a href="https://gentle-hollows-60962.herokuapp.com">Doorman</a>
-                <a href="https://pokefinder-tcg.herokuapp.com/">PokefinderTCG</a>
+                <a href="https://shanestewart4.github.io/Ideal-Meal/" target="_blank">
+                    <img src="./assets/images/screenshot1.png">
+                    <br/>Ideal Meal</a>
+                <a href="https://gentle-hollows-60962.herokuapp.com" target="_blank">
+                    <img src="./assets/images/screenshot2.png">
+                    <br/>Doorman</a>
+                <a href="https://pokefinder-tcg.herokuapp.com/" target="_blank">
+                    <img src="./assets/images/screenshot3.png">
+                    <br/>PokefinderTCG</a>
             </div>
             </div>
         </section>
