--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <main>
         <div class="container">
-        <section class="certificates">
+        <section id="certificates">
             <div class="row">
                 <div class="column">
                 <h2>Certificates</h2>
@@ -50,23 +50,32 @@
         <section id="collaborative-projects">
             <div class="row">
                 <div class="column">
-                <h2>Collaborative Projects</h2>
+                <h2>Collaborative <br/>Projects</h2>
                 </div>
             <div class="right-column collabproject-tile">
+                <div>
                 <a href="https://shanestewart4.github.io/Ideal-Meal/" target="_blank">
                     <img src="./assets/images/screenshot1.png">
                     <br/>Ideal Meal</a>
+                    <br/>Front-End
+                </div>
+                <div>
                 <a href="https://gentle-hollows-60962.herokuapp.com" target="_blank">
                     <img src="./assets/images/screenshot2.png">
                     <br/>Doorman</a>
+                    <br/>Full-Stack
+                </div>
+                <div>
                 <a href="https://pokefinder-tcg.herokuapp.com/" target="_blank">
                     <img src="./assets/images/screenshot3.png">
                     <br/>PokefinderTCG</a>
+                    <br/>MERN Stack
+                </div>
             </div>
             </div>
         </section>
 
-        <section class="contact">
+        <section id="contact">
             <div class="row">
                 <div class="column">
                 <h2>Contact</h2>
