--- a/index.html
+++ b/index.html
@@ -32,8 +32,45 @@
                 <div class="column">
                 <h2>Certificates</h2>
                 </div>
-            <div class="right-column">
-                
+            <div class="right-column certtile">
+                <div class="wrapper">
+                    <div>
+                        <a href="https://photos.app.goo.gl/pJnYvunWLy1Lb9Z17" target="_blank">
+                            <img src="./assets/images/screenshot7.png">
+                            <br/>Web Development</a>
+                            <br/>Vanderbilt University
+                    </div>
+                    <div>
+                        <a href="https://courses.edx.org/certificates/fa3980157605488a8e1e4db9334bf700" target="_blank">
+                            <img src="./assets/images/screenshot10.png">
+                            <br/>Computer Science 101</a>
+                            <br/>Stanford Online
+                    </div>
+                    <div>
+                        <a href="https://courses.edx.org/certificates/652e2b96930c449c90bdb614f5f974fa" target="_blank">
+                            <img src="./assets/images/screenshot9.png">
+                            <br/>Bitcoin and Cryptocurrencies</a>
+                            <br/>BerkeleyX
+                    </div>
+                    <div>
+                        <a href="https://courses.edx.org/certificates/0f8c97e354dc46ceb6287bfa2a8a67f3" target="_blank">
+                            <img src="./assets/images/screenshot13.png">
+                            <br/>Programming for the Web with JavaScript</a>
+                            <br/>PennX
+                    </div>
+                    <div>
+                        <a href="https://courses.edx.org/certificates/1ab6fd3c9781496faf9282bfcf1d7955" target="_blank">
+                            <img src="./assets/images/screenshot6.png">
+                            <br/>Introduction to Cybersecurity</a>
+                            <br/>UWashingtonX
+                    </div>
+                    <div>
+                        <a href="https://freecodecamp.org/certification/jess922/responsive-web-design" target="_blank">
+                            <img src="./assets/images/screenshot4.jpg">
+                            <br/>Responsive Web Design</a>
+                            <br/>Free Code Camp
+                    </div>
+                    </div>
             </div>
             </div>
         </section>
@@ -44,7 +81,32 @@
                 <h2>Projects</h2>
                 </div>
             <div class="right-column project-tile">
-                
+                <div class="wrapper">
+                    <div>
+                        <a href="https://jessm91.github.io/surveyform/" target="_blank">
+                            <img src="./assets/images/screenshot8.png">
+                            <br/>Survey Form</a>
+                            <br/>HTML & CSS
+                    </div>
+                    <div>
+                        <a href="https://jessm91.github.io/techdocpage/" target="_blank">
+                            <img src="./assets/images/screenshot12.png">
+                            <br/>Technical Documentation Page</a>
+                            <br/>HTML & CSS
+                    </div>
+                    <div>
+                        <a href="https://jessm91.github.io/tributepage/" target="_blank">
+                            <img src="./assets/images/screenshot5.png">
+                            <br/>Tribute Page</a>
+                            <br/>HTML & CSS
+                    </div>
+                    <div>
+                        <a href="https://jessm91.github.io/productlanding/" target="_blank">
+                            <img src="./assets/images/screenshot11.png">
+                            <br/>Product Landing Page</a>
+                            <br/>HTML & CSS
+                    </div>
+                </div>
             </div>
             </div>
         </section>
@@ -55,6 +117,7 @@
                 <h2>Collaborative <br/>Projects</h2>
                 </div>
             <div class="right-column collabproject-tile">
+                <div class="wrapper">
                 <div>
                 <a href="https://shanestewart4.github.io/Ideal-Meal/" target="_blank">
                     <img src="./assets/images/screenshot1.png">
@@ -73,6 +136,7 @@
                     <br/>PokefinderTCG</a>
                     <br/>MERN Stack
                 </div>
+                </div>
             </div>
             </div>
         </section>
@@ -83,10 +147,14 @@
                 <h2>Contact</h2>
                 </div>
             <div id="contactLink" class="right-column">
+                <div class="wrapper">
+                <div>
                 <ul>
                 <li><a href="mailto:jmangiam@asu.edu">Email</a></li>
                 <li><a href="https://github.com/jessm91" target="_blank">Github</a></li>
                 </ul>
+                </div>
+            </div>
             </div>
             </div>
         </section>
